--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "postcss-color-mix": "^1.1.0",
+    "postcss-for": "^2.1.1",
     "vue": "^3.4.29"
   },
   "devDependencies": {
@@ -27,6 +29,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.38",
+    "postcss-each": "^1.1.0",
+    "postcss-each-variables": "^0.3.0",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
