--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/ez-element.umd.cjs",
+  "module": "./dist/ez-element.js",
+  "exports": {
+    ".": {
+      "import": "./dist/ez-element.js",
+      "require": "./dist/ez-element.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -46,6 +57,7 @@
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-plugin-dts": "^3.9.1",
     "vitepress": "^1.2.3",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
