--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/ez-element.umd.cjs",
-  "module": "./dist/ez-element.js",
+  "main": "./dist/umd/ez-element.umd.cjs",
+  "module": "./dist/es/ez-element.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/ez-element.js",
-      "require": "./dist/ez-element.umd.cjs"
+      "import": "./dist/es/ez-element.js",
+      "require": "./dist/umd/ez-element.umd.cjs",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-p build-only:es build-only:umd",
     "preview": "vite preview",
     "build-only": "vite build",
+    "build-only:es": "vite build --config vite.es.config.ts",
+    "build-only:umd": "vite build --config vite.umd.config.ts",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
