--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "ez-element",
-  "version": "0.0.0",
-  "private": true,
+  "name": "@goodlark/ez-element",
+  "version": "1.0.1",
+  "description": "Vue3 components library",
   "type": "module",
+  "author": "Estar Zhang",
+  "license": "MIT",
   "files": [
     "dist"
+  ],
+  "sideEffect": [
+    "dist/index.css"
   ],
   "main": "./dist/umd/ez-element.umd.cjs",
   "module": "./dist/es/ez-element.js",
@@ -17,7 +22,8 @@
     },
     "./dist/": {
       "import": "./dist/",
-      "require": "./dist/"
+      "require": "./dist/",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
@@ -33,7 +39,8 @@
     "format": "prettier --write src/",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -41,8 +48,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "lodash-es": "^4.17.21",
     "postcss-color-mix": "^1.1.0",
-    "postcss-for": "^2.1.1",
-    "vue": "3.4.30"
+    "postcss-for": "^2.1.1"
+  },
+  "peerDependencies": {
+    "vue": "^3.4.30"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -70,6 +79,7 @@
     "vite-plugin-dts": "^3.9.1",
     "vitepress": "^1.2.3",
     "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.21"
+    "vue-tsc": "^2.0.21",
+    "vue": "3.4.30"
   }
 }
