--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "docs:preview": "vitepress preview docs",
     "prepublishOnly": "pnpm run build"
   },
+  "packageManager": "pnpm@latest",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
