--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "vite-plugin-dts": "^3.9.1",
     "vitepress": "^1.2.3",
     "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.21",
-    "vue": "3.4.30"
+    "vue": "3.4.30",
+    "vue-tsc": "^2.0.21"
   }
 }
