--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "docs:dev": "pnpm run dev --prefix docs",
-    "docs:build": "pnpm run start --prefix docs",
+    "docs:build": "npm start --prefix docs",
     "docs:preview": "pnpm run preview --prefix docs",
     "prepublishOnly": "pnpm run build"
   },
