--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init": "npm install",
+    "init": "pnpm install",
     "dev": "vitepress dev",
     "start": "vitepress build",
     "preview": "vitepress preview"
