--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
+        run: pnpm install # 或 npm ci / yarn install / bun install
+      - name: Install docs dependencies
         run: pnpm run docs:install # 或 npm ci / yarn install / bun install
       - name: Build with VitePress
         run: pnpm run docs:build # 或 npm run docs:build / yarn docs:build / bun run docs:build
