去除开发依赖中的postcss插件部分

--- a/package.json
+++ b/package.json
@@ -48,9 +48,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "lodash-es": "^4.17.21",
-    "postcss-color-mix": "^1.1.0",
-    "postcss-for": "^2.1.1"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "vue": "^3.4.30"
@@ -72,8 +70,10 @@
     "move-file-cli": "^3.0.0",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.38",
+    "postcss-color-mix": "^1.1.0",
     "postcss-each": "^1.1.0",
     "postcss-each-variables": "^0.3.0",
+    "postcss-for": "^2.1.1",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
